added pipeline, serializers, default ctors for Jackson, add locale to PageComponent for keying, add full integration  test